Fix visual contrast issues

--- a/src/sass/responsive/_nav.scss
+++ b/src/sass/responsive/_nav.scss
@@ -322,6 +322,7 @@ body.sideNav {
 		z-index: 3;
 		.menu-button {
 			display: none;
+			color: $blue0;
 		}
 	}
 
